<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEFEF"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/actor_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:text="@string/uuid_title_tv"
                    android:textSize="@dimen/beacon_property_tv_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/uuid_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:textSize="@dimen/beacon_property_tv_size"
                    tools:text="DF7E1C79-43E9-44FF-886F-1D1F7DA6997A" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:text="@string/major_title_tv"
                    android:textSize="@dimen/beacon_property_tv_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/major_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:textSize="@dimen/beacon_property_tv_size"
                    tools:text="123" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:text="@string/minor_title_tv"
                    android:textSize="@dimen/beacon_property_tv_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minor_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:textSize="@dimen/beacon_property_tv_size"
                    tools:text="123" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:text="@string/rssi_title_tv"
                    android:textSize="@dimen/beacon_property_tv_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rssi_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:textSize="@dimen/beacon_property_tv_size"
                    tools:text="123" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:text="@string/distance_title_tv"
                    android:textSize="@dimen/beacon_property_tv_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distance_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/beacon_property_tv_margin"
                    android:gravity="center"
                    android:textSize="@dimen/beacon_property_tv_size"
                    tools:text="123" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>